--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.17.0",
     "mongoose": "^8.16.0",
+    "multer": "^2.0.1",
     "mustache": "^4.2.0",
     "nodemailer": "^7.0.3",
     "winston": "^3.17.0",
@@ -33,6 +34,7 @@
     "@types/express": "^5.0.3",
     "@types/joi": "^17.2.2",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/multer": "^1.4.13",
     "@types/mustache": "^4.2.6",
     "@types/node": "^24.0.4",
     "@types/nodemailer": "^6.4.17",
